# irbasis_utility

./: .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md  setup.py
Notebooks/: four_point_ph.ipynb  four_point_ph_cp_decomposition-lambda1000.ipynb  four_point_ph_cp_decomposition.ipynb  four_point_ph_cp_decomposition_auto_alpha-lambda1000.ipynb  four_point_ph_cp_decomposition_auto_alpha.ipynb  four_point_ph_tensor_regression.ipynb
doc/: Rohringer2012.ipynb  four_point_ph.ipynb  tensor_network.odg  two_particle_gf.tex
example/five_orbital/: slater.py
irbasis_util/: CMakeLists.txt  __init__.py  auto_als.py  four_point.py  four_point_ph_view.py  gf.py  internal.py  regression.py  requirements.txt  solver.py  tensor_network.py  tensor_regression.py  tensor_regression_auto_als.py  tensor_regression_mps.py  three_point.py  two_point_basis.py
python/: CMakeLists.txt  __init__.py  augmented_basis.py  auto_als.py  four_point.py  four_point_ph_view.py  gf.py  internal.py  lsqr.py  regression.py  requirements.txt  setup.py  solver.py  tensor_network.py  tensor_regression.py  tensor_regression_auto_als.py  tensor_regression_mps.py  three_point.py  three_point_ph.py  two_point_basis.py
python/opt_einsum/: contract.py  paths.py
script/: multiply_PH.py  regression_cthyb.py  regression_four_point_cthyb.py
test/: CMakeLists.txt
test/python/: CMakeLists.txt  atomic_limit.py  common.py  four_point_ph_view.py  four_point_ph_view_test.py  four_point_test.py  gf_test.py  internal_test.py  regression_test.py  sampling_test.py  solver_test.py  tensor_network_mpi_test.py  tensor_network_test.py  tensor_regression_mps_test.py  tensor_regression_test.py  three_point_ph_test.py  three_point_test.py  two_point_basis_test.py
